fixed z-index for responsive navigation

--- a/css/main.css
+++ b/css/main.css
@@ -265,6 +265,7 @@ footer .logo {
 	}
 	.navbar-collapse .pull-right {
 		float: none !important;
+		z-index: 100;
 	}
 }
 
